JSW Devsb/src/objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Territory_State__c</fullName>
        <formula>Territory__r.Districts__r.State__r.Name</formula>
        <label>Territory State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>District__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Date__c</fullName>
        <formula>CASE( Month_of_Commercial_Invoice_Date__c , &quot;January&quot;,  Commercial_Invoice_Date_Formula__c   - 31 , &quot;February&quot;,Commercial_Invoice_Date_Formula__c   - 28 ,&quot;March&quot;,  Commercial_Invoice_Date_Formula__c   - 31, &quot;April&quot;,  Commercial_Invoice_Date_Formula__c   - 30, &quot;May&quot;,  Commercial_Invoice_Date_Formula__c   + 31, &quot;June&quot;,  Commercial_Invoice_Date_Formula__c   - 30, &quot;July&quot;,  Commercial_Invoice_Date_Formula__c   - 31, &quot;August&quot;,  Commercial_Invoice_Date_Formula__c   - 30, &quot;September&quot;,  Commercial_Invoice_Date_Formula__c   - 30, &quot;October&quot;,  Commercial_Invoice_Date_Formula__c   - 31, &quot;November&quot;,  Commercial_Invoice_Date_Formula__c   - 30,(Commercial_Invoice_Date_Formula__c   - 31))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Adhoc_Discount__c</fullName>
        <formula>IF( Brand_Short_Form__c  = &apos;GGBS&apos;, ((Adhoc_Incentive_Value__c  +  Invoice_Discount_Value__c) *  Qty__c),((Adhoc_Incentive_Value__c  +  Customer_Incentive_Value__c  +  Invoice_Discount_Value__c) *  Qty__c) +  Customer_Special_Dscount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Adhoc Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Basic_Price__c</fullName>
        <label>Total Basic Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_MRP_Value__c</fullName>
        <label>Total MRP Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_tax__c</fullName>
        <label>Total tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_value__c</fullName>
        <label>Total value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transporter_Code__c</fullName>
        <label>Transporter Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transporter_Name__c</fullName>
        <label>Transporter Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Truck_Number__c</fullName>
        <label>Truck Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UGST_Value__c</fullName>
        <label>UGST Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UGST__c</fullName>
        <label>UGST %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <label>UOM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Inv_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Inv Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VAT_Value__c</fullName>
        <label>VAT Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAT__c</fullName>
        <label>%VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>Text(YEAR(  Commercial_Invoice_Date_Formula__c  ))</formula>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ship_To_State__c</fullName>
        <label>Ship To State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sales_District__c</columns>
        <columns>Commercial_Invoice_Date_Formula__c</columns>
        <columns>Brand_Short_Form__c</columns>
        <columns>Qty__c</columns>
        <columns>Distribution_Channel__c</columns>
        <columns>Shipping_Type__c</columns>
        <columns>Plant__c</columns>
        <columns>Road_Invoice__c</columns>
        <columns>Depot_Invoice__c</columns>
        <columns>Plant_Short_Form__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Last_15_Days_Invoices</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Commercial_Invoice_Number__c</columns>
        <columns>Commercial_Invoice_Date_Formula__c</columns>
        <columns>Brand_Short_Form__c</columns>
        <columns>Qty__c</columns>
        <columns>Total_value__c</columns>
        <columns>Sales_District_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Commercial_Invoice_Date_Formula__c</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:15</value>
        </filters>
        <label>Last 15 Days Invoices</label>
    </listViews>
    <listViews>
        <fullName>Last_30_Days_Invoices</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Commercial_Invoice_Number__c</columns>
        <columns>Commercial_Invoice_Date_Formula__c</columns>
        <columns>Brand_Short_Form__c</columns>
        <columns>Product_Description__c</columns>
        <columns>Qty__c</columns>
        <columns>Total_value__c</columns>
        <columns>Sales_District_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Commercial_Invoice_Date_Formula__c</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Last 30 Days Invoices</label>
    </listViews>
    <listViews>
        <fullName>Last_7_Days_Invoices</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Commercial_Invoice_Number__c</columns>
        <columns>Commercial_Invoice_Date_Formula__c</columns>
        <columns>Brand_Short_Form__c</columns>
        <columns>Truck_Number__c</columns>
        <columns>Total_value__c</columns>
        <columns>Product_Description__c</columns>
        <columns>Qty__c</columns>
        <columns>Sales_District_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Commercial_Invoice_Date_Formula__c</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <filters>
            <field>Brand_Short_Form__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Last 7 Days Invoices</label>
    </listViews>
    <listViews>
        <fullName>Today_s_Invoices</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Commercial_Invoice_Number__c</columns>
        <columns>Commercial_Invoice_Date_Formula__c</columns>
        <columns>Brand_Short_Form__c</columns>
        <columns>Product_Description__c</columns>
        <columns>Qty__c</columns>
        <columns>Total_value__c</columns>
        <columns>Sales_District_Description__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Commercial_Invoice_Date_Formula__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Invoices</label>
    </listViews>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>